<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CityAlerts</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_send_alert">SendAlert</string>
    <string name="username">Użytkownik</string>
    <string name="password">Hasło</string>
    <string name="register">Rejestracja</string>
    <string name="login">Login</string>
    <string name="newAlert">Nowe zgłoszenie</string>
    <string name="email">E-mail</string>
    <string name="doRegister">Zarejestruj</string>
    <string name="title_activity_alert">Alert</string>
    <string name="registerSuccess">Zarejestrowano</string>
    <string name="registerFail">Rejestracja nie powiodła się</string>
    <string name="emailExists">Podany email jest zajęty</string>
    <string name="loginExists">Podany login jest zajęty</string>
    <string name="doLogin">Zaloguj!</string>
    <string name="loginSuccess">Zalogowano</string>
    <string name="loginFail">Podano złe dane</string>
    <string name="logout">Wyloguj</string>
    <string name="logoutSuccess">Wylogowano</string>
    <string name="login2">Użytkownik</string>
    <string name="category">Kategoria</string>
    <string name="newCategory">Nowa kategoria</string>
    <string name="city">Miasto</string>
    <string name="description">Opis</string>
    <string name="street">Ulica</string>
    <string name="userOrEmailExists">Podany użytkownik lub email jest już zajęty</string>
    <string name="uploading">Wysyłanie&#8230;</string>
    <string name="remember">Zapamiętaj</string>
    <string name="logging">Logowanie&#8230;</string>
    <string name="noConnection">Brak połączenia</string>
    <string name="sent">Wysłano</string>
    <string name="registrating">Rejestracja&#8230;</string>
    <string name="send">Wyślij</string>
    <string name="polish">Polski</string>
    <string name="english">English</string>
    <string name="internet">Internet:</string>
    <string name="facebook_app_id">743690302394221</string>
    <string name="title_activity_main_fragment">MainFragment</string>
    <string name="hideAlert">Ukryj zgłoszenie</string>

</resources>
