<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.cityalerts.MainActivity" >

    <Button
        android:id="@+id/button1"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:gravity="center"
        android:text="@string/register"
        android:background="#8033B6C8"
         />
    
	<EditText
	    android:id="@+id/login"
	    android:layout_width="240dp"
	    android:layout_height="wrap_content"
	    android:visibility="gone"
	    android:gravity="center"
	    android:hint="@string/login" />
    
    <EditText
        android:id="@+id/email"
        android:layout_width="240dp"
		android:layout_height="wrap_content"
		android:visibility="gone"
		android:gravity="center"
		android:hint="@string/email"
		android:inputType="textEmailAddress"
		/>
    
    <EditText
        android:id="@+id/password"
        android:layout_width="240dp"
		android:layout_height="wrap_content"
		android:visibility="gone"
		android:gravity="center"
		android:hint="@string/password"
		android:inputType="textPassword"/>
    
    <Button
        android:id="@+id/registerCommand"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:gravity="center"
        android:text="@string/doRegister"
        android:background="#80E33798"
         />
			
    <Button
        android:id="@+id/button2"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:gravity="center"
        android:text="@string/login" 
        android:background="#808CF03A"
        />
    
    <EditText
	    android:id="@+id/login2"
	    android:layout_width="240dp"
	    android:layout_height="wrap_content"
	    android:visibility="gone"
	    android:gravity="center"
	    android:hint="@string/login2" />
    
    <EditText
	    android:id="@+id/password2"
	    android:layout_width="240dp"
	    android:layout_height="wrap_content"
	    android:visibility="gone"
	    android:gravity="center"
	    android:hint="@string/password" 
	    android:inputType="textPassword"/>
    
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        >
        
        <CheckBox
            android:id="@+id/remember"
           	android:visibility="gone"
           	android:layout_width="wrap_content"
           	android:layout_height="wrap_content"
           	android:gravity="center"
            />
        
        <TextView 
            android:id="@+id/rememberUser"
            android:visibility="gone"
            android:text="@string/remember"
            android:layout_width="wrap_content"
           	android:layout_height="wrap_content"
            android:gravity="center"
            />
        
        
    </LinearLayout>
    
    <Button
        android:id="@+id/loginCommand"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:gravity="center"
        android:text="@string/doLogin"
        android:background="#80F00000"
         />

    <Button
        android:id="@+id/button3"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:gravity="center"
        android:text="@string/newAlert" 
        android:background="#80FFFF3E"
        />
    
</LinearLayout>