<ScrollView 
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
    android:gravity="center_horizontal"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >

	<LinearLayout 
   	 android:layout_width="match_parent"
   	 android:layout_height="match_parent"
   	 android:paddingTop="30dp"
   	 android:orientation="vertical"
   	 android:gravity="center_horizontal"
   	 android:layout_gravity="top"
     >

    	<EditText
    	    android:id="@+id/city"
    	    android:layout_width="240dp"
    	    android:layout_height="wrap_content"
    	    android:layout_marginBottom="20dp"
    	    android:textSize="22sp"
    	    android:gravity="center"
    	    android:background="@drawable/roundcity"
    	    android:hint="@string/city" />
    	
    	<EditText
    	    android:id="@+id/street"
    	    android:layout_width="240dp"
    	    android:layout_height="wrap_content"
    	    android:layout_marginBottom="20dp"
    	    android:textSize="22sp"
    	    android:background="@drawable/roundstreet"
    	    android:gravity="center"
    	    android:hint="@string/street" />
    	
    	<EditText
    	    android:id="@+id/description"
    	    android:layout_width="240dp"
    	    android:layout_height="wrap_content"
    	    android:layout_marginBottom="20dp"
    	    android:textSize="22sp"
    	    android:inputType="textMultiLine"
    	    android:lines="4"
    	    android:gravity="center"
    	    android:hint="@string/description"
    	    android:background="@drawable/rounddescription" />
    	
	        <Spinner
	            android:id="@+id/spinner"
	            android:layout_width="240dp"
	            android:background="@drawable/roundcity"
	            android:gravity="center"
	            android:textSize="22sp"
	            android:layout_marginBottom="20dp"
	            android:layout_height="wrap_content" />
	    
			<CheckBox
			    android:id="@+id/checkbox"
			    android:layout_width="wrap_content"
			    android:gravity="center"
				android:layout_marginBottom="20dp"			   
			    android:layout_height="wrap_content" 
			    android:text="@string/newCategory"
			    />
		
    	<EditText
    	    android:id="@+id/newCategory"
    	    android:layout_width="240dp"
    	    android:layout_height="wrap_content"
    	    android:gravity="center"
    	    android:textSize="22sp"
    	    android:background="@drawable/roundcategory"
    	    android:layout_marginBottom="20dp"
    	    android:hint="@string/category"
    	    android:visibility="gone"
    	     />

    	<ImageView
    	    android:id="@+id/imageView1"
  			android:layout_width="180dp"
   			android:layout_height="180dp"
			android:src="@drawable/gallery" 
			android:layout_marginBottom="20dp"
			/>

    	<Button
    	    android:id="@+id/buttonTest"
    	    android:gravity="center"
    	    android:layout_width="240dp"
    	    android:layout_height="wrap_content" 
    	    android:background="@drawable/roundsend"
    	    android:text="@string/send"
    	    android:layout_marginBottom="20dp"
    	    
    	    />

	</LinearLayout>
</ScrollView>